<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_gradient"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tituloti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"/>

    <Button
        android:id="@+id/btnCreateTicket"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/abrirchamado"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:background="#2196F3"
        android:textColor="#FFFFFF"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/tituloti"
        android:onClick="openCreateTicketActivity"/>

    <Button
        android:id="@+id/btnConsultTicket"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/gerenciarchamado"
        android:textSize="20sp"
        android:background="#2196F3"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/btnCreateTicket"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:onClick="openConsultTicketActivity" />

    <Button
        android:id="@+id/btnITDepartment"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/ti"
        android:textSize="20sp"
        android:background="#2196F3"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/btnConsultTicket"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:onClick="openITDepartmentActivity" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/navHostFragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_graph" />

</RelativeLayout>