<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_gradient">

    <TextView
        android:id="@+id/tituloti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"/>

    <TextView
        android:id="@+id/descricao"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/descricao"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_below="@id/tituloti"/>


    <EditText
        android:id="@+id/et_problem_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="Digite aqui a descrição do(s) problema(s)"
        android:maxLines="20"
        android:padding="120dp"
        android:layout_below="@id/descricao"/>

    <Button
        android:id="@+id/btncontinuechamado2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continuar"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/et_problem_description"
        android:onClick="openCreateTicket3"
        />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/navHostFragmentcreate2"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_graph" />

</RelativeLayout>